<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_addMovie"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/stringAddMovie"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_editMovie"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stringEdit"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_addMovie" />

    <Button
        android:id="@+id/button_deleteMovie"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stringDeleteMovie"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editMovie" />

    <Button
        android:id="@+id/button_showListByYear"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stringShowListByYear"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_deleteMovie" />

    <Button
        android:id="@+id/button_showListByRating"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stringShowListByRating"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_showListByYear" />
</androidx.constraintlayout.widget.ConstraintLayout>